[package]
name = "barust"
version = "0.3.0"
edition = "2021"
description = "A X11 status bar"
repository = "https://github.com/fiorematteo/barust"
readme = "README.md"
keywords = ["x11", "status", "bar"]
categories = ["gui"]
license = "MIT"

[lib]
name = "barust"

[dependencies]
async-channel = "1.9.0"
async-trait = "0.1.71"
cairo-rs = { version = "0.18.5", features = ["xcb"] }
chrono = { version = "0.4.22", optional = true }
futures = "0.3.30"
ipgeolocate = { version = "0.3.6", optional = true }
iwlib = { version = "0.1.0", optional = true }
libnotify = "1.0.3"
libpulse-binding = { version = "2.28.1", optional = true }
librsvg = "2.57.1"
log = "0.4.17"
open-meteo-api = { version = "0.1.3", optional = true }
pango = "0.18.0"
pangocairo = "0.18.0"
psutil = { version = "3.2.2", optional = true }
public-ip = { version = "0.2.2", optional = true }
pulsectl-rs = {version = "0.3.2", optional = true }
pyo3 = { version = "0.19.0", features = ["auto-initialize"] }
signal-hook = "0.3.17"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
thiserror = "1.0.37"
tokio = { version = "1.29.1", features = ["full"] }
xcb = "1.3.0"

[dev-dependencies]
cairo-rs = { version = "0.15.12", features = ["xcb", "png"] }
console-subscriber = "0.2.0"
futures = "0.3.30"
log = "0.4.17"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
pyo3 = { version = "0.19.0", features = ["auto-initialize"] }
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
simple-logging = "2.0.2"

[[example]]
name = "barust"
path = "example/main.rs"

[features]
default = ["all"]
all = ["clock", "cpu", "disk", "memory", "psutil", "temp", "pulseaudio", "wlan", "openmeteo"]
clock = ["dep:chrono"]
cpu = ["dep:psutil"]
disk = ["dep:psutil"]
memory = ["dep:psutil"]
psutil = ["dep:psutil"]
temp = ["dep:psutil"]
pulseaudio = ["dep:libpulse-binding", "dep:pulsectl-rs"]
wlan = ["dep:iwlib"]
openmeteo = ["dep:open-meteo-api", "dep:ipgeolocate", "dep:public-ip"]
