[package]
name = "barust"
version = "0.1.0"
edition = "2021"
description = "A X11 status bar"
repository = "https://github.com/fiorematteo/barust"
readme = "../README.md"
keywords = ["x11", "status", "bar"]
categories = ["gui"]
license = "MIT"

[lib]
name = "barust"

[dependencies]
cairo-rs = { version = "0.15.12", features = ["xcb", "png"] }
xcb = { version = "1.1.1" }
chrono = "0.4.22"
psutil = "3.2.2"
xcb-wm = { version = "0.4.0" , features = ["ewmh"] }
pangocairo = "0.15.1"
pango = "0.15.10"
derive_more = "0.99.17"
log = "0.4.17"
iwlib = "0.1.0"
crossbeam-channel = "0.5.6"
signal-hook = "0.3.14"

