[package]
name = "barust"
version = "0.2.0"
edition = "2021"
description = "A X11 status bar"
repository = "https://github.com/fiorematteo/barust"
readme = "../README.md"
keywords = ["x11", "status", "bar"]
categories = ["gui"]
license = "MIT"

[lib]
name = "barust"

[dependencies]
widgets = { path = "../widgets" }
utils = { path = "../utils" }
async-trait = { workspace = true }
cairo-rs = { workspace = true }
chrono = { workspace = true }
iwlib = { workspace = true }
log = { workspace = true }
pango = { workspace = true }
pangocairo = { workspace = true }
psutil = { workspace = true }
thiserror = { workspace = true }
xcb = { workspace = true }
async-channel = { workspace = true }
tokio = { workspace = true }
signal-hook-tokio = { version = "0.3.1", features = ["futures-core-0_3", "futures-v0_3"] }
futures-util = "0.3.28"
signal-hook = "0.3.17"
