[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
barust = { path = "../core" }
cairo-rs = { version = "0.15.12", features = ["xcb", "png"] }
console-subscriber = "0.2.0"
log = "0.4.17"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
pango = { workspace = true }
pangocairo = { workspace = true }
pyo3 = { version = "0.19.0", features = ["auto-initialize"] }
simple-logging = "2.0.2"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
xcb = { workspace = true }

[[bin]]
name = "barust"
path = "src/main.rs"
