[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = { workspace = true }
cairo-rs = { workspace = true }
log = { workspace = true }
psutil = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
xcb = { workspace = true }

